force-app/main/default/objects/SBQQ__BlockPrice__c/fields/ATG_Test_Product__c.field-meta.xml
<CustomField>
        <fullName>ATG_Test_Product__c</fullName>
        <formula>SBQQ__Product__r.ATG_Test_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATG Test Product</label>
        <type>Checkbox</type>
    </CustomField>