force-app/main/default/objects/SBQQ__BlockPrice__c/fields/SBQQ__EffectiveDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EffectiveDate__c</fullName>
        <description>The date when this block price is effective.  The value is taken when a block price snapshot is taken at order creation time.</description>
        <inlineHelpText>The date when this block price is effective.  The value is taken when a block price snapshot is taken at order creation time.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </CustomField>