force-app/main/default/objects/SBQQ__BlockPrice__c/fields/SBQQ__LowerBound__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LowerBound__c</fullName>
        <description>Lower bound of the quantity range for this block price.</description>
        <inlineHelpText>Lower bound of the quantity range for this block price.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>