force-app/main/default/objects/SBQQ__BlockPrice__c/fields/SBQQ__OriginalBlockPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OriginalBlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original product block price where this block price is snapshotted from.</description>
        <inlineHelpText>The original product block price where this block price is snapshotted from.</inlineHelpText>
        <label>Original Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Block Prices</relationshipLabel>
        <relationshipName>SnapshotBlockPrices</relationshipName>
        <type>Lookup</type>
    </CustomField>