force-app/main/default/objects/SBQQ__BlockPrice__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product to which block pricing applies.</description>
        <inlineHelpText>Select the product that should receive block pricing when applicable.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Block Prices</relationshipLabel>
        <relationshipName>BlockPrices</relationshipName>
        <type>Lookup</type>
    </CustomField>