force-app/main/default/objects/SBQQ__BlockPrice__c/fields/SBQQ__QuoteLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote line where this block price applies to when an order product is created.</description>
        <inlineHelpText>The quote line where this block price applies to when an order product is created.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Block Prices</relationshipLabel>
        <relationshipName>BlockPrices</relationshipName>
        <type>Lookup</type>
    </CustomField>